# CCPi-Regularisation-Toolkit

.github/workflows/: ccpi_regulariser_pypi_publish.yml
src/Python/: pyproject.toml
