[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
include = ["ccpi", "ccpi.*"]
[tool.setuptools.package-data]
"ccpi.filters" = ["*cilreg.*", "*cilregcuda.*"] # cmake libraries

[project]
version = "24.1.0"
name = "ccpi-regulariser"
dependencies = [
    "numpy",
    "pillow",
    "pytest",
    "imageio",
]
[project.optional-dependencies]
gpu = ["cupy"]
